Update 2.1P Chameleon T2_2023.md
EVCFLO update

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -197,40 +197,43 @@ Project EVCFLO provides aid to this cause through two key services: interactive 
 2. Narrow down to the key external factors which impact the usage and success of EVs and EVCSs
 3. Display newly discovered EVCS locations onto a visual map.
 4. Integrate new EVCS locations onto our Google API interactive map.
-5. Fully migrate and host the new React based EVCFLO website.
 
 #### Aims this Trimester
-Convert the old HTML/CSS website to new website that using React framework and aim to integrate an interactive map that covers all EVCS locations across the globe to the website. Research and implement an AI Prediction System that automatically and accurately recommends new EVCS locations for EVCS companies to utilize. Further, we aim to advance the project website by implementing design work completed by previous trimesters and add more contents to the website.
+The project's primary goals encompass creating a robust online presence for EVAT by establishing a LinkedIn page and producing compelling content related to EVCFLO and Evolean. In the realm of data science, the focus is on streamlining workflows across the team, expanding the EV Charging station Location database with new datasets, and generating comprehensive notebooks for data analysis and modelling. The team aims to develop interactive dashboards using Tableau and Power BI to track progress and company analytics, specifically monitoring the growth of charging station data over time. Additionally, the data science team will prepare trimester reports to identify potential project directions and explore collaboration opportunities with other departments. In parallel, the web development team will revamp the front-end design based on design team documents and Evolean app styling, enhancing the website's user interface. They will integrate newly discovered EVCS locations on a visual map and implement a heatmap to showcase activity hubs for electric car chargers. The addition of a chatbot and a login function with Firebase backend connectivity will further elevate the website's functionality, while ongoing improvement of clustering predictions will enhance overall performance. Through these endeavours, the project seeks to bolster EVAT's digital presence and advance data science and web development capabilities. 
 
 #### Deliverables
-- Better Integrate the EVCFLO website and Evoleon app together (Web-Development team).
-- Create sign up function that is connected to the firebase backend (Web-Development team).
-- Refresh website visual design, coordinate with Evoleon app team (Web-Development team).
-- Display newly discovered EVCS locations onto a visual map (Web-Development team).
-- Integrate new EVCS locations onto our Google API interactive map (Web-Development team).
-- Implement website designs on the EVCFLO website and increase the sites functionality (Web-Development team).
-- Expand on our EV Charge Location database through the addition of new datasets. (Data Science Team)
-- Continue to improve the clustering predictions, these are working but can be improved (Data Science Team).
-- Create more EVCS related AI/ML models to facilitate EVCS development and promote EV adaptation (Data Science Team).
-- Conduct more EV/EVCS related research and data analysis on newfound datasets (Data Science Team).
-- Improve the current visualisations (Both teams).
+Data Science
+- Continue development of standardising workflows across all elements of the data science team. 
+- Expand on our EV Charging station Location database through the addition of new and updated datasets.  
+- Provide list of completed notebooks (link to webpage) for data analysis: transform, visualise, model, communicate. 
+- Develop dashboards (Tableau & Power BI) tracking progress and internal company analytics, i.e increase in charging station analytics from trimester to trimester. 
+- Produce a trimester report for identifying potential directions for projects within the data science team and where collaboration can be made with other chameleon teams.
+
+Web Dev 
+- Refresh the design of the front end based on documents by the design team, as well as the Evoleon app styling. 
+- Display newly discovered EVCS locations onto a visual map.  
+- Create a ‘heatmap’ showing activity hubs for electric car chargers 
+- Create a chatbot that will popup when using the website 
+- Create a login function with connectivity to the firebase backend that the Evoleon app uses. 
+- Create design mock-ups for the new pages that will be created 
+- Integrate new EVCS locations onto our Google API interactive map (Web-Development team).  
+- Continue to improve the clustering predictions, these are working but can be improved.  
+- Implement website designs on the EVCFLO website and increase the sites functionality.  
 
 
 #### EVCFLO Project Members
 
 | **Name** | **Student_ID** | **UG/PG** | **J/S** | **Team** | **Lead** |
 | :-- | :-- | :-: | :-: | :-: | :-: |
-| **Scott Geoffrey West** | 213121254 | Postgrad | Junior | Data Science | Co.|
-| **Jamie Connor Davidson** | 222356461 | Postgrad | Junior | Data Science |  |
-| **Siqin Chen** | 221115918 | Postgrad | Senior | Data Science |  |
-| **Viola Cherotich Meli** | 221187491 | Postgrad | Senior | Data Science |  |
-| **Chaoyi (Barry) Chen** | 220358865 | Postgrad | Junior | Web Dev, Project | Yes | |
-| **Ishika Khanna** | 219551957 | Undergrad | Junior | Web Dev | Yes |  |
-| **Arnold Prabudda Kalpesh Mendis** | 222330109 | Undergrad | Junior | Web Dev |  |
-| **Mark Justin Premier** | 222115089 | Postgrad | Senior | Web Dev |  |
-| **Yousef Ashraf Y A Al-Mulla** | 221410734 | Undergrad | Junior | Web Dev |  | 
-| **Yesini Charithma Liyanage** | 222063923 | Undergrad | Junior | Web Dev | Yes |
-
+| **Yesini Charithma Liyanage** | 222063923 | Undergrad | Senior | Web Dev | Yes |
+| **Jamie Connor Davidson** | 222356461 | Postgrad | Senior | Data Science | Yes |
+| **Jennifer Yau** | 222087183 | Postgrad | Junior | Data Science | Yes |
+| **Yuvraj Sekhon** | 222184401 | Undergrad | Junior | Data Science |  |
+| **Mark Justin Premier** | 222115089 | Postgrad | Senior | Web Dev | Yes |
+| **Ishika Khanna** | 219551957 | Undergrad | Senior | Web Dev | Yes |  
+| **Yousef Ashraf Y A Al-Mulla** | 221410734 | Undergrad | Senior | Web Dev |  | 
+| **Hoi Fung Dicky** | 222383729 | Postgrad | Junior | Web Dev |  | 
+| **Shuodong Xing** | 219368407 | Undergrad | Junior | Web Dev |  | 
 
 ### <a name="evm"></a>Evoleon Mobile Application
 
