Update 2.1P Chameleon T2_2023.md
Evolean App update

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -238,33 +238,30 @@ Web Dev
 ### <a name="evm"></a>Evoleon Mobile Application
 
 #### Overview
-The Evoleon app strives to provide owners of Electric Vehicles (EVs) with tools to assist in planning their travels by utilising the user-friendly application and charging station data to determine the most efficient route. 
+The Evoleon App will help EV owners better plan their trips by identifying optimal EV charging stations as waypoints on their journey and provide them relevant information about those charging stations.   
 
 #### Goals & Objectives
-The Evoleon app is an application-based (Android and IOS) solution for finding EV charging stations based on criteria entered by a user. While not unique, the Evoleon app strives to be the best solution on the market by offering features to make it a more rounded product experience; these features include:  
-- The use of filtering certain charging stations based on different types of EV fuel sources (Hydrogen and Electricity) and other amenities such as cinemas, restaurants and hairdressers. 
-- Utilise a journey planner to create a more effective route for users traveling from point A to B to reduce the time taken and environmental impact to reach their intended destination. 
-- Calculating the cost of users driving their EVs compared to traditional combustion cars provides an overview of actual savings running an EV. 
-- A clean and intuitive interface can be utalised by any user who downloads the app. 
+The goal of this project is to be able to design and implement a mobile app (Android and IOS) to help consumers identify nearby charging locations. Although there are existing products that are similar, here are a few examples of what the app may offer in addition to the core function of locating a socket:   
+
+- Providing additional information and filtering of stations based on type (EV vs hydrogen, for example), information on the source of the power (direct solar, grid powered, gas, diesel etc).  
+- Providing a full journey planner for longer trips that optimizes for reducing charge time, cost and environmental impact along the route.   
+- Ability to incorporate your usage data with current fuel prices, cost of maintenance etc and provide an indication of real savings for running the vehicle.   
 
 
 #### Aims this Trimester
-Through the development life cycle of the Evoleon application, a high-fidelity prototype has been produced. Following the recommendations outlined last trimester, the team is looking to finalise the new EVAT colour scheme bringing the application more in-line with other products produced by EVAT. By the end of the trimester, the Evoleon app dev team wants to be able to set forward their vision for the Evoleon application. 
+The aim this trimester is to continue implementing the designs created by previous teams and increase the applications functionality. A basic version of the app is currently working but it only has a few screens implemented and the functionality is very limited. 
 
 #### Deliverables
-- Improve the existing navigation system, allowing the routing to be in the app instead of sending users to Google Maps. 
-- Change hardcoded colour values to dynamic variables so the application's color scheme can be changed efficiently and effectively in case of a branding update. 
-- Add an option to filter EV chargers on the map based on amenities stored in the database for that EV charging location.
-- Move the hamburger menu from the top left of the screen to a menu at the bottom, similar to the Figma designs.
-- Research and conduct a security audit of the application and its backend services to determine if there are any severe risks to users and their data. 
-- Continue to expand and improve the application interface, making it more user-friendly. 
-
-
-
+- Work on adding real EV Location data into the new Firestore locations database.  
+- Create a Navigation System for the applications map to travel to a selected EV Charger.  
+- Add an option to filter EV chargers on the map based on amenities stored in database for that EV charging location.  
+- Move the hamburger menu from the top left of the screen to a menu at the bottom of the screen, similar to the Figma designs.  
+- Complete a cyber security review of the app’s authentication process, data storage, code in GitHub repository, and apps terms and conditions.  
+- Add the process to reset a user’s password or delete an account.  
+- Continue adding user interface code for the applications pages. 
 <br>
 <br>
 <br>
-
 #### Evoleon App Project Members
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** |
@@ -323,8 +320,8 @@ The web team is aiming to further streamline the processes for which the noteboo
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | 
 | :-- | :-- | :-: | :-: | :-: | :-: |
-| **Chaoyi (Barry) Chen** | 220358865 | Undergrad | Senior | Data Science, Security, Board, MOP Project Lead | Yes | 
-| **Mollie Fernandez** | 217285498 | Postgrad | Junior | Data Science | Yes | 
+| **Chaoyi (Barry) Chen** | 220358865 | Undergrad | Senior | Data Science| Yes | 
+| **Mollie Fernandez** | 217285498 | Postgrad | Junior | Cyber Security | Yes | 
 | **Vaibhav Kashyap** | 220641102 | Undergrad | Senior | Data Science | Yes | 
 | **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  |
 | **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes |  |
