Update 2.1P Chameleon T2_2023.md
MOP member details update

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -320,34 +320,34 @@ The web team is aiming to further streamline the processes for which the noteboo
 
 | **Name** | **Student ID** | **UG/PG** | **J/S** | **Team** | **Lead** | 
 | :-- | :-- | :-: | :-: | :-: | :-: |
-| **Chaoyi (Barry) Chen** | 220358865 | Undergrad | Senior | Data Science| Yes | 
+| **Chaoyi (Barry) Chen** | 220358865 | Postgrad | Senior | Data Science| Yes | 
 | **Mollie Fernandez** | 217285498 | Postgrad | Junior | Cyber Security | Yes | 
 | **Vaibhav Kashyap** | 220641102 | Undergrad | Senior | Data Science | Yes | 
-| **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  |
-| **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes |  |
-| **Yash Krupanand Daware** | S222482648 | Postgrad | Junior | Data Science |  |  |
+| **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  
+| **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes |  
+| **Yash Krupanand Daware** | S222482648 | Postgrad | Junior | Data Science | Yes |  
 | **Nathan Graham Clee** | 221255235 | Undergrad | Senior | Data Science |  | 
-| **Shanuk Julian Devamulla** | 221159324 | Undergrad | Senior | Data Science |  |
-| **Keefe Euler Alpay** | 221243463 | Undergrad | Senior | Data Science |  |
-| **Siyu Ai** | 223008124 | Postgrad | Senior | Dev Team|  | 
+| **Shanuk Julian Devamulla** | 221159324 | Undergrad | Senior | Data Science | Yes |
+| **Keefe Euler Alpay** | 221243463 | Undergrad | Senior | Data Science | Yes |
+| **Siyu Ai** | 223008124 | Postgrad | Senior | Data Science|  | 
 | **Steven Nguyen** | 222337088 | Undergrad | Senior | Data Science |  | 
-| **Prathibha Kandawala** | 222440671 | Undergrad | Senior | Data Science |  | 
 | **Jackson Tran** | 219219244 | Undergrad | Junior | Data Science |  | 
 | **Siju Deng** | s222376251 | Postgrad | Senior | Data Science |  | 
-| **Amy Tran** | 213358131 | Undergrad | Senior | Data Science | | 
-| **Matheesha Nirvan Palliyaguruge Geeganagama Arachige** | 222506155 | Undergrad | Junior | Dev Team |  | 
-| **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team |  | 
+| **THI THANH QUYEN (Amy) Tran** | 213358131 | Undergrad | Senior | Data Science | | 
+| **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team | Yes | 
+| **Yashika Arora** | 221080858 | Undergrad | Junior | Dev Team | Yes | 
 | **Mihili Isurika Geeganage Geeganagama Arachchige** | 222398483 | Undergrad | Senior | Dev Team |  | 
-| **Roshan Jose** | 221499484 | Postgrad | Senior | Dev Team |  |
 | **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  | 
+| **Prathibha Kandawala** | 222440671 | Undergrad | Senior | Dev Team |  | 
 | **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | 
 | **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes | 
-| **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  |
+| **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  
 | **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security |  | 
 | **Izaz Ishaque** | 221005704 | Postgrad | Senior | Cyber Security | Yes |  
 | **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  |  
 | **Zachary Max Kein** | 220277143 | Undergrad | Senior | Cyber Security |  |
 | **Antony Raju** | 221471405 | Postgrad | Senior | Cyber Security |  |
+| **Roshan Jose** | 221499484 | Postgrad | Senior | Cyber Security |  |
 
 
 
