Update 2.1P Chameleon T2_2023.md
Chameleon website project update

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -355,33 +355,38 @@ The web team is aiming to further streamline the processes for which the noteboo
 
 #### Overview
 
-The website for the Chameleon company overall aims to publicise the achievements and progress of Chameleon overall and showcase the sub-companies within it, one of the best ways to do this is through a website. 
+The website for the Chameleon company aims to publicise the achievements and progress of Chameleon overall and showcase the sub-companies within it. One of the best ways to do this is through a website.
 
 #### Goals & Objectives
 
-The main objectives of this website is to provide a one-stop for all – where it includes all the other sub-companies’ infortmation, objectives and links. We want to be able to use this website to advocate for the company, and be able to promote it while having the website be visually appealing, and comes with easy functionality.
+The main objective of the website is to provide a single source for all Chameleon related matters, including other subcompanies’ information, objectives and links. We want to be able to use this website to advocate for the company and be able to promote it while having the website be visually appealing, and comes with easy functionality.  
 
 #### Aims this Trimester
 
-The aim for this trimester will be to modify the front-end and the back-end of the website majority, and make it optimised for mobile access. While the backend hasn’t been implemented, it means we have a lot of scope to implement this from scratch. This includes setting up the staff log-in portal, implementing API’s with SendGrid and Mailchimp and creating a client portal.
+The aim for this trimester will be to modify the front-end and the back-end of the website and to make it optimised for mobile access. While the back-end hasn’t been implemented, it means we have a lot of scope to implement this from scratch. This includes setting up the staff log-in portal, implementing API’s with SendGrid and Mailchimp and creating a client portal.  
 
-For the front-end of the website, we aim to make the website more appealing, with the design and web development skills of the students. We want to deliver a high-quality attrractive, easy to navigate and overall simple aesthetic of the website. This also means through using correct wireframing techniques within the design team, agreeing on a solid design that meets this criteria before implementing.
+For the front-end of the website, we aim to make the website more appealing, with the design and web development skills of the students. We want to deliver a high-quality attractive, easy to navigate and overall simple aesthetic of the website. To do this we will implement correct wireframing and prototyping techniques to come up with a solid design that meets requirements prior to implementation.  
 
-It will be imporant for the Chameleon Website to present all the other projects for the Chameleon company on the website, while this has currently been started – links have not been provided. 
+It will be important for the Chameleon Website to showcase all the other projects being carried out by the Chameleon company. Incorporating these projects into the website has commenced, but links have not been provided.   
 
-Overall, reducing awkwardness on the website and providing a smooth experience is the overall aim for this trimester. 
+Overall, optimising the user website experience and reducing awkwardness is the primary aim for this trimester.    
 
 
 #### Deliverables
 
-- Implement a more aesthetic and navigation friendly design
-- Work on the blogging section of the website – add links to other projects
-- Build the staff portal and implement the API’s behind it to get it running
-- Reevaluate the Resources tab to see what can be added and removed from it
-- Work on the fonts used and colour scheme of the website, and adding in different components to the website design
-- Implement mobile views for the website
-- Implement SEO strategy to rank the website higher in web search engines
-- Building a client user account portal to view progress, updates and services of the Chameleon Projects
+- Develop website style guide to ensure consistency in design  
+- Design website landing page that incorporates other Chameleon projects  
+- Create responsive mobile compatible designs including wireframes and prototypes for each project within Chameleon (EV, MOD and Website) 
+- Implement a more aesthetic and user-friendly design. This includes stylistic components (fonts, colour scheme, buttons, etc.) and general usability (layout, navigation, etc.) 
+- Develop website landing page that connects Chameleon projects  
+-  Develop responsive mobile views for the website (code) 
+- Enhance login portal functionality  
+- Develop a news/blog page that provides end-users with project news and updates  
+- Build the staff login portal and implement required backend components  
+- Re-evaluate the resources tab to see what can be added and removed from it  
+- Research and implement SEO strategy to rank the website higher in web search engines  
+- Develop a client user account portal system to view progress, updates, and services of the Chameleon Projects. Possibly include the ability to sign up for browser notifications / newsletters 
+- Review and implement required / potential API’s   
 
 
 #### Project Members
