Update 2.1P Chameleon T2_2023.md
-Update MOP team member detail
-Update typo on MOP detail

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -285,11 +285,11 @@ The City of Melbourne has been an Australian leader in Open Data since 2014. The
 
 This project entails the development of an educational platform that showcases the practical applications of Open Data, specifically designed to cater to the needs of various stakeholders, such as industry professionals, government entities, and academic researchers. The primary objective of this project is to leverage the utilisation of the City of Melbourne's Open Data.
 
-The long-term goal is to data useage, facilitating innovative and informed solutions to contemporary challenges across the City of Melbourne council area.
+The long-term goal is to data usage, facilitating innovative and informed solutions to contemporary challenges across the City of Melbourne council area.
 
-#### Aims this Trimester
+#### Aims This Trimester
 
-The initial main focus is to read the documentation for the new API for the Melbourne Open Data Playground, and systematically work through each published (and yet to be published) notebooks and modify the code so that they will run if downloaded.
+The initial main focus is to read the documentation for the new API for the Melbourne Open Data Playground, and systematically work through each published (and yet to be published) notebook and modify the code so that they will run if downloaded.
 
 The aim for the Data Science team is to create a new set of use cases that fit within the 3 defined key areas of interest from the City Of Melbourne. The team is planning to complete a full set of use cases, and also have enough in the backlog for the next trimester when students will be focussed on InnoFes.
 
@@ -301,7 +301,7 @@ The web team is aiming to further streamline the processes for which the noteboo
 
 - Update the API on all published notebooks (ready to be published again), and notebooks ready for publishing.
 - Implement a human-readable URL
-- Identify vulnerabilities in the source code, python code and database then document a roadmap to mitigatethem
+- Identify vulnerabilities in the source code, python code and database then document a roadmap to mitigate them
 - Implement mobile views for the website
 - Complete analysis on multiple use cases (ready for publishing)
 - Create multiple new use cases, allowing enough in the backlog for the next trimester
@@ -309,7 +309,7 @@ The web team is aiming to further streamline the processes for which the noteboo
 - Cleaner resources for the handover procedures for MOP
 - Add more functionality to the website
 - Implement some interactivity with JavaScript
-- Fix the lingering deisgn / css issues within the website
+- Fix the lingering design / css issues within the website
  
 
 #### Project Members
@@ -321,20 +321,20 @@ The web team is aiming to further streamline the processes for which the noteboo
 | **Vaibhav Kashyap** | 220641102 | Undergrad | Senior | Data Science | Yes | 
 | **SimranJit Singh** | 222429305 | Postgrad | Junior | Data Science | Yes |  
 | **Kruthi Shetty** | 222067974 | Postgrad | Senior | Data Science | Yes |  
-| **Yash Krupanand Daware** | S222482648 | Postgrad | Junior | Data Science | Yes |  
+| **Yash Krupanand Daware** | 222482648 | Postgrad | Junior | Data Science | Yes |  
 | **Nathan Graham Clee** | 221255235 | Undergrad | Senior | Data Science |  | 
 | **Shanuk Julian Devamulla** | 221159324 | Undergrad | Senior | Data Science | Yes |
 | **Keefe Euler Alpay** | 221243463 | Undergrad | Senior | Data Science | Yes |
 | **Siyu Ai** | 223008124 | Postgrad | Senior | Data Science|  | 
 | **Steven Nguyen** | 222337088 | Undergrad | Senior | Data Science |  | 
 | **Jackson Tran** | 219219244 | Undergrad | Junior | Data Science |  | 
-| **Siju Deng** | s222376251 | Postgrad | Senior | Data Science |  | 
+| **Siju Deng** | 222376251 | Postgrad | Senior | Data Science |  | 
 | **THI THANH QUYEN (Amy) Tran** | 213358131 | Undergrad | Senior | Data Science | | 
+| **Prathibha Kandawala** | 222440671 | Undergrad | Senior | Data Science |  |
 | **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team | Yes | 
 | **Yashika Arora** | 221080858 | Undergrad | Junior | Dev Team | Yes | 
 | **Mihili Isurika Geeganage Geeganagama Arachchige** | 222398483 | Undergrad | Senior | Dev Team |  | 
-| **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  | 
-| **Prathibha Kandawala** | 222440671 | Undergrad | Senior | Dev Team |  | 
+| **Syed Kareemullah** | 220462373 | Undergrad | Senior | Dev Team |  |  
 | **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | 
 | **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes | 
 | **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  
