Update 2.1P Chameleon T2_2023.md
- update MOP deliverable

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -299,7 +299,7 @@ The web team is aiming to further streamline the processes for which the noteboo
 
 #### Deliverables
 
-- Update the API on all published notebooks (ready to be published again), and notebooks ready for publishing.
+- Update the API on all remaining published notebooks
 - Implement a human-readable URL
 - Identify vulnerabilities in the source code, python code and database then document a roadmap to mitigate them
 - Implement mobile views for the website
