Update 2.1P Chameleon T2_2023.md
-update image link so can properly convert into pdf

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -158,7 +158,7 @@ Evoleon Mobile Application (_sub project 2_)
 
 # <a name="company-structure"></a><h1 style="color:#336699">Company Structure</h1>
 
-<img src="Images/chameleon_t2_2023.png" alt= "Company Structure" width="600" height="550">
+<img src="https://gcdnb.pbrd.co/images/KmSgnbC20dhg.png?o=1%22" alt= "Company Structure" width="600" height="550">
 
 
 # <a name="tri-goals"></a><h1 style="color:#336699">Trimester Goals & Objectives</h1>
