--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -302,18 +302,17 @@ The web team is aiming to further streamline the processes for which the noteboo
 
 #### Deliverables
 
-- Update the API on all remaining published notebooks
-- Implement a human-readable URL
-- Identify vulnerabilities in the source code, python code and database then document a roadmap to mitigate them
-- Implement mobile views for the website
-- Complete analysis on multiple use cases (ready for publishing)
-- Create multiple new use cases, allowing enough in the backlog for the next trimester
-- Publish notebooks that are ready to be published
-- Cleaner resources for the handover procedures for MOP
-- Add more functionality to the website
-- Implement some interactivity with JavaScript
-- Fix the lingering design / css issues within the website
- 
+- Update the API on all remaining published notebooks - (Data Science Team)
+- Complete analysis on multiple use cases (ready for publishing) - (Data Science Team)
+- Create multiple new use cases, allowing enough in the backlog for the next trimester - (Data Science Team)
+- Publish notebooks that are ready to be published - (Data Science & Web Dev Team)
+- Cleaner resources for the handover procedures for MOP - (All Teams)
+- Fix deployment issues and Implement a human-readable URL- (Web Dev Team)
+- Add more functionality to the website- (Web Dev Team)
+- Implement some interactivity with JavaScript- (Web Dev Team)
+- Fix the lingering design / css issues within the website- (Web Dev Team)
+- Fix design / css issues on old user case pages- (Web Dev Team)
+- Identify vulnerabilities in the source code, python code and database then document a roadmap to mitigate them - (Cyber Security Team)
 
 #### Project Members
 
@@ -331,9 +330,9 @@ The web team is aiming to further streamline the processes for which the noteboo
 | **Siyu Ai** | 223008124 | Postgrad | Senior | Data Science|  | 
 | **Steven Nguyen** | 222337088 | Undergrad | Senior | Data Science |  | 
 | **Jackson Tran** | 219219244 | Undergrad | Junior | Data Science |  | 
-| **Siju Deng** | 222376251 | Postgrad | Senior | Data Science |  | 
+| **Siju Deng** | 222376251 | Postgrad | Junior | Data Science |  | 
 | **THI THANH QUYEN (Amy) Tran** | 213358131 | Undergrad | Senior | Data Science | | 
-| **Prathibha Kandawala** | 222440671 | Undergrad | Senior | Data Science |  |
+| **Prathibha Kandawala** | 222440671 | Postgrad | Junior | Data Science |  |
 | **Jiahao Pan** | 218562599 | Postgrad | Senior | Dev Team | Yes | 
 | **Yashika Arora** | 221080858 | Undergrad | Junior | Dev Team | Yes | 
 | **Mihili Isurika Geeganage Geeganagama Arachchige** | 222398483 | Undergrad | Senior | Dev Team |  | 
