Update 2.1P Chameleon T2_2023.md
- Update Evolean App leadership

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -135,9 +135,9 @@ EV Charger Forecasting & Location Optimisation (_sub project 1)_
 - Data Science Co-Lead: Jennifer Yau 
 
 Evoleon Mobile Application (_sub project 2_)
-- Sub Project Lead: Joel Murphy-Dyer  
+- Sub Project Lead: Jordan Sam Cooke 
 - App Dev Lead: Aanan Abdullah
-
+- App Dev Co-Lead: Joel Murphy-Dyer 
 
 <h4 style="color:#336699; text-align:left;">Melbourne Open Data</h4>
 <b>Project Lead:</b> Barry Chen & Mollie Fernandez
