Update 2.1P Chameleon T2_2023.md
update MOP deliverables

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -309,18 +309,17 @@ The web team is aiming to further streamline the processes for which the noteboo
 
 #### Deliverables
 
-- Update the API on all published notebooks and notebooks ready for publishing.
-- Implement a human-readable URL.
-- Identify vulnerabilities in the source code and python code.
-- Document a road map to mitigate these vulnerabiliities. 
-- Implement mobile views for the website.
-- Complete analysis on multiple use cases (ready for publishing).
-- Create multiple new use cases, ensureing there is enough in the backlog for the next trimester.
-- Publish notebooks that are ready to be published.
-- Ensure resources for the handover procedures are clear 
-- include mroe functionalitiies within the website
-- Implement some interactivity with JavaScript
-- Fix any lingering deisgn and CSS issues within the website
+- Update the API on all remaining published notebooks - (Data Science Team)
+- Complete analysis on multiple use cases (ready for publishing) - (Data Science Team)
+- Create multiple new use cases, allowing enough in the backlog for the next trimester - (Data Science Team)
+- Publish notebooks that are ready to be published - (Data Science & Web Dev Team)
+- Cleaner resources for the handover procedures for MOP - (All Teams)
+- Fix deployment issues and Implement a human-readable URL- (Web Dev Team)
+- Add more functionality to the website- (Web Dev Team)
+- Implement some interactivity with JavaScript- (Web Dev Team)
+- Fix the lingering design / css issues within the website- (Web Dev Team)
+- Fix design / css issues on old user case pages- (Web Dev Team)
+- Identify vulnerabilities in the source code, python code and database then document a roadmap to mitigate them - (Cyber Security Team)
  
 
 #### Project Members
