Update 2.1P Chameleon T2_2023.md
Updated leaders

--- a/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
+++ b/Assessment Tasks/2023-T2/2.1P Chameleon T2_2023.md
@@ -348,7 +348,7 @@ The web team is aiming to further streamline the processes for which the noteboo
 | **Izaz Ishaque** | 221005704 | Postgrad | Senior | Cyber Security | Yes | 
 | **Amby Sarrazin** | 220321559 | Undergrad | Junior | Cyber Security | Yes | 
 | **Michael Wei Zhang** | 221282074 | Undergrad | Senior | Cyber Security | Yes |  
-| **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security |  | 
+| **Mariam Kassar** | 220234902 | Undergrad | Junior | Cyber Security | Yes | 
 | **Roshan Jose** | 221499484 | Postgrad | Senior | Cyber Security |  |
 | **Muhammed Nihal** | 221461233 | Postgrad | Senior | Cyber Security |  | 
 | **Basilia Carmel Sethu** | 221491966 | Postgrad | Senior | Cyber Security |  |  
